# ci_helloworld

./: .appveyor.yml  .doxygen.txt  .travis.yml  CMakeLists.txt  LICENSE.md  README.md
include/: consumer.h  producer.h
src/: main.cpp  producer.cpp
test/: test.cpp  test_consumer.cpp  test_main.cpp  test_producer.cpp
